feat: profile draft

--- a/src/i18n/locales/en/screen.json
+++ b/src/i18n/locales/en/screen.json
@@ -5,5 +5,6 @@
   "contacts": "Contacts",
   "intro": "Intro",
   "inboxScreen": "Inbox",
-  "subscriptionScreen": "Subscription"
+  "subscriptionScreen": "Subscription",
+  "profileConnectedMail": "Email Accounts"
 }
