feat: inbox screen empty data

--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -4,7 +4,7 @@
   "save": "Save",
   "youDoNothing": "You do nothing",
   "copied": "Copied",
-  "notAnyData": "No data",
+  "notAnyData": "Anybody here? There are no emails found.",
   "start": "Start",
   "error": "Error",
   "success": "Success"
