fix: bottom bar profile name screen

--- a/src/i18n/locales/en/screen.json
+++ b/src/i18n/locales/en/screen.json
@@ -5,6 +5,7 @@
   "contacts": "Contacts",
   "intro": "Intro",
   "inboxScreen": "Inbox",
+  "ProfileScreen": "Profile",
   "subscriptionScreen": "Subscription",
   "profileConnectedMail": "Email Accounts"
 }
