--- a/src/i18n/locales/en/screen.json
+++ b/src/i18n/locales/en/screen.json
@@ -7,5 +7,8 @@
   "inboxScreen": "Inbox",
   "ProfileScreen": "Profile",
   "subscriptionScreen": "Subscription",
-  "profileConnectedMail": "Email Accounts"
+  "profileConnectedMail": "Email Accounts",
+  "detailScreen": {
+    "inspectionHistoryManagementDetails":"점검 이력관리 상세"
+  }
 }
