feat: home screen

--- a/src/i18n/locales/en/screen.json
+++ b/src/i18n/locales/en/screen.json
@@ -1,5 +1,5 @@
 {
-  "home": "Home",
+  "home": "홈",
   "contactManagement": "Contact Management",
   "newContacts": "New Contact",
   "contacts": "Contacts",
